# BoadGameSentimentAnalysis

./: .gitignore  Justfile  bg_scraper.py  collect_prices.py  pyproject.toml
analysis/: analysis.ipynb  analysis_2.ipynb  pyproject.toml  utils.py  word_difficulty.py
analysis/pickle/: example_translations
src/: dynamic_scraper.py  model.py  scraper.py  writer.py
src/collect/: details.py  prices.py  reviews.py
