[project]
name = "bgg"
version = "0.1.0"
description = ""
authors = [{name="ZiveRael", email="papeernscal@gmail.com"}]
readme = "README.md"
dependencies = [
    "pydantic==2.11.10",
    "beautifulsoup4==4.14.2",
    "selenium==4.37.0",
    "requests==2.32.5",
    "pandas==2.3.3",
    "tqdm>=4.67.1",
    "retry>=0.9.2",
]
requires-python=">= 3.12, <3.13"


[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "ruff==0.13.3",
    "pdbpp==0.11.7",
    "pytest-cov==7.0.0",
    "pandas-stubs==2.3.2.250926",
    "black==25.9.0",
]

[tool.black]
line-length = 80
skip-string-normalization = true
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
plugins = [
    "pydantic.mypy",
]
warn_unused_configs = true
show_error_context = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true



[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F841"]
ignore = [ "ANN", "TD", "N805", "COM812", "ISC001", "E501", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D"]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument:
    "DTZ001",  # The use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "EM101",   # Exception must not use a string literal, assign to variable first
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison, consider replacing x with a constant variable
    "PT004",   # Fixture `x` does not return anything, add leading underscore
    "S101",    # Use of assert
    "SLF001",  # Private member accessed
    "TRY003",  # Avoid specifying long messages outside the exception class
    "D",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party"
]
lines-after-imports = 2
known-third-party = ["yaml"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
filterwarnings = [
]
