[project]
name = "bgg-analysis"
version = "0.1.0"
description = ""
authors = [{name="ZiveRael", email="papeernscal@gmail.com"}]
readme = "README.md"
dependencies = [
    "pydantic==2.11.10",
    "beautifulsoup4==4.14.2",
    "tqdm>=4.67.1",
    "polars==1.36.1",
    "ipykernel==6.31.0",
    "matplotlib==3.10.8",
    "nltk==3.9.2",
    "spicy==0.16.0",
    "spacy>=3.8.11",
    "wordcloud>=1.9.5",
    "googletrans>=4.0.2",
    "scikit-learn>=1.8.0",
    "stopwordsiso>=0.6.1",
    "pip>=25.3",
    "langdetect>=1.0.9",
]
requires-python=">= 3.12, <3.13"


[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.13.3",
    "pdbpp==0.11.7",
]

[tool.black]
line-length = 80
skip-string-normalization = true
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
plugins = [
    "pydantic.mypy",
]
warn_unused_configs = true
show_error_context = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true



[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F841"]
ignore = [ "ANN", "TD", "N805", "COM812", "ISC001", "E501", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D"]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument:
    "DTZ001",  # The use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "EM101",   # Exception must not use a string literal, assign to variable first
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison, consider replacing x with a constant variable
    "PT004",   # Fixture `x` does not return anything, add leading underscore
    "S101",    # Use of assert
    "SLF001",  # Private member accessed
    "TRY003",  # Avoid specifying long messages outside the exception class
    "D",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party"
]
lines-after-imports = 2
known-third-party = ["yaml"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
filterwarnings = [
]
